2006-03-21  Leonard den Ottolander  <leonard den ottolander nl>

	* choosesyntax.c: GPL v2 only.

2006-03-17  Oswald Buddenhagen  <ossi@kde.org>

	* edit-widget.h (struct WEdit): Add new field.
	* editcmd.c (edit_save_file): Prompt whether to detach a hardlinked
	file if in "Quick save" mode.
	Return -1 to indicated that the user requested to cancel the
	operation.
	(edit_save_as_cmd): Adjust the code to handle the new return
	value of edit_save_file().
	(edit_save_cmd): Likewise.

2006-03-17  Oswald Buddenhagen <ossi@kde.org>

	* editcmd.c (edit_save_as_cmd): If saving of the file fails
	remove only the _save_ lock. 

2006-03-15  Pavel Tsekov  <ptsekov@gmx.net>

	* editlock.c: Fix for savannah bug #13673.
	(lock_build_symlink_name): New function.
	(edit_lock_file): Use lock_build_symlink_name().
	(edit_unlock_file): Likewise.

2006-03-15  Pavel Tsekov  <ptsekov@gmx.net>

	* editcmd.c (edit_new_cmd): Remove redundant call to
	`edit_unlock_file()'.
	(edit_ok_to_exit): Likewise.

2006-02-10  Roland Illig  <roland.illig@gmx.de>

	* edit.c (user_menu): There is no need to prefix the filename
	with PATH_SEP when calling concat_dir_and_file().

2006-02-03  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed the leading PATH_SEP_STR from EDIT_DIR, as the
	latter is not an absolute directory.
	* edit.c: Adjusted the users of EDIT_DIR.
	* editcmd.c: Likewise.
	* syntax.c: Likewise.
	* src/user.c: Likewise.

2006-02-02  Leonard den Ottolander  <leonard den ottolander nl>

	* edit.c (edit_execute_cmd): Reload syntax on toggle to on.

2006-02-01  Andy Shevchenko  <andy@pylesos.interdon.net>

	* edit.c, editcmddef.h, editkeys.c: Add Ctrl-S to toggle syntax
	highlighting. Patch from unnamed MPlayer developer.

2006-01-30  Pavel Tsekov  <ptsekov@gmx.net>

	* editcmd.c: Do not set the field `histname' of `QuickWidget'
	unless the widget is of type `quick_input'.

2006-01-27  Pavel Tsekov  <ptsekov@gmx.net>

	* editcmd.c (edit_block_copy_cmd): Allow a block of selected